# party-booking

./: .env  Cargo.toml  README.md
migrations/: 001_initial.sql
src/: db.rs  main.rs
src/handlers/: auth.rs  events.rs  mod.rs  reservations.rs
src/models/: event.rs  mod.rs  reservation.rs  user.rs
static/css/: app.css
templates/: base.html
templates/auth/: login.html  register.html
templates/events/: _cards.html  detail.html  list.html
templates/reservations/: list.html
