[package]
name = "party-booking"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
anyhow = "1"
tracing-subscriber = "0.3"
serde_json = "1.0.150"
